freest/test/prog/Invalid/Parsing/ListMissingTypeApp/ListMissingTypeApp.fst
module ListMissingTypeApp where

foo : [Int]
foo = [0]
